<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="ad_app_id" tools:ignore="MissingTranslation">"ca-app-pub-9788292917303375~7718408116"</string>
    <string name="banner_ad_id" tools:ignore="MissingTranslation">"ca-app-pub-9788292917303375/2233722111"</string>
    <string name="screen_ad_id" tools:ignore="MissingTranslation">"ca-app-pub-9788292917303375/4006802931"</string>
    <string name="reward_ad_id" tools:ignore="MissingTranslation">"ca-app-pub-9788292917303375/3590817309"</string>

    <string name="invitation_deep_link" tools:ignore="MissingTranslation">"https://sn3d4.app.goo.gl/SmartSetting"</string>
    <string name="contact_email" tools:ignore="MissingTranslation">"sky877kr@gmail.com"</string>

    <string name="notification_channel_id" tools:ignore="MissingTranslation">"notification_ts_channel_id"</string>
    <string name="notification_channel_name" tools:ignore="MissingTranslation">"notification_ts_channel_name"</string>


    <string name="bluetooth_turn" tools:ignore="MissingTranslation">"Bluetooth : %s"</string>
    <string name="wifi_turn" tools:ignore="MissingTranslation">"Wifi : %s"</string>
    <string name="on" tools:ignore="MissingTranslation">"ON"</string>
    <string name="off" tools:ignore="MissingTranslation">"OFF"</string>

    <string name="app_name">SmartSetting</string>
    <string name="setting">"Setting"</string>
    <string name="use">"Use"</string>
    <string name="enabled">"Enabled"</string>
    <string name="search">"Search"</string>
    <string name="save">"Save"</string>
    <string name="location">"Location"</string>
    <string name="basics">"Basics"</string>
    <string name="bluetooth">"Bluetooth"</string>
    <string name="arrive">"Arrive"</string>
    <string name="wifi">"Wi-Fi"</string>
    <string name="cancel">"Cancel"</string>
    <string name="ok">"ok"</string>
    <string name="sound">"Sound"</string>
    <string name="vibration">"Vibration"</string>
    <string name="silent">"Silent"</string>


    <string name="select_app">"Select App"</string>
    <string name="location_setting">"Location Settings"</string>
    <string name="app_in_use">"Smart Setting in use"</string>
    <string name="app_content">"Touch to set smart settings."</string>
    <string name="delete_location">"Are you sure you want to delete this location?"</string>
    <string name="contact_us">"Contact us"</string>
    <string name="sound_mode">"Sound mode"</string>
    <string name="no_change">"No change"</string>

    <string name="launch_the_app">"Launch the %s app."</string>
    <string name="no_app_selected">"No apps selected."</string>
    <string name="no_app_available">"No app available to choose from."</string>
    <string name="connect_earphone">"If I connect my earphone,"</string>
    <string name="connect_bluetooth">"If I connect my bluetooth,"</string>
    <string name="arrive_location">"When we arrived at the location"</string>

    <string name="according_to_location">"According to location"</string>
    <string name="when_i_arrived">"When I arrived"</string>
    <string name="when_you_go_out">"when you go out"</string>


    <!--error-->
    <string name="error_permission">"Permissions must be allowed to use."</string>
    <string name="error_email">"There are no email applications installed."</string>

    <!--hint-->
    <string name="hint_location">"Please select a location."</string>


    <!--guide-->
    <string name="msg_quit">"Pressing the "back" button ends."</string>
    <string name="msg_earphone">"Please select an app to run automatically"</string>
    <string name="msg_bluetooth">"Please select an app to run automatically"</string>
    <string name="msg_location">"Select the settings you want to change automatically."</string>
    <string name="msg_contact">"Send an email to the developer."</string>
    <string name="msg_sound_mode">"You must enable Do Not Disturb mode before you can use it."</string>


    <string name="shared_title">Invite</string>
    <string name="shared_message">I recommend App to you :)</string>
    <string name="shared_call_to_action_text">Install!</string>
</resources>
