<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="LocationBinding">

        <import type="android.view.View" />

        <variable
            name="model"
            type="com.yts.smartsetting.view.viewmodel.LocationViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardBackground"
        android:clickable="true"
        android:orientation="vertical">
        <!--헤더-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->model.close()}"
                android:padding="16dp"
                app:srcCompat="@drawable/ic_arrow_back_white_24dp" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/location_setting"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:foreground="?android:selectableItemBackground"
                android:gravity="center_vertical"
                android:onClick="@{()->model.saveLocation()}"
                android:padding="16dp"
                android:text="@string/save"
                android:textSize="14sp"
                android:textStyle="bold" />


        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/basics"
                    android:textColor="@color/textColorHint"
                    android:textSize="12sp" />

                <!--위치-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foreground="?android:selectableItemBackground"
                    android:gravity="center"
                    android:onClick="@{()->model.startSelectLocation()}"
                    android:padding="16dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:orientation="vertical">

                        <android.support.v7.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:hint="@string/hint_location"
                            android:singleLine="true"
                            android:text="@{model.location.name}"
                            android:textSize="14sp" />

                        <android.support.v7.widget.AppCompatTextView
                            setVisible="@{model.isSelectLocation}"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:singleLine="true"
                            android:text="@{model.location.address}"
                            android:textSize="12sp"
                            tools:visibility="gone" />
                    </LinearLayout>
                </LinearLayout>

                <View style="@style/lineView" />

                <!--도착했을때-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/when_i_arrived"
                    android:textColor="@color/textColorHint"
                    android:textSize="12sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="16dp"
                        android:text="@string/bluetooth" />

                    <ToggleButton
                        android:id="@+id/toggle_arrive_bluetooth"
                        setCheck="@{model.location.arriveBlueTooth}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:onClick="@{(v)->model.toggle(v)}"
                        android:textOff="@string/off"
                        android:textOn="@string/on" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="16dp"
                        android:text="@string/wifi" />

                    <ToggleButton
                        android:id="@+id/toggle_arrive_wifi"
                        setCheck="@{model.location.arriveWifi}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:onClick="@{(v)->model.toggle(v)}"
                        android:textOff="@string/off"
                        android:textOn="@string/on" />
                </LinearLayout>

                <View style="@style/lineView" />

                <!--나갔을때-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/when_you_go_out"
                    android:textColor="@color/textColorHint"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="16dp"
                        android:text="@string/bluetooth" />

                    <ToggleButton
                        android:id="@+id/toggle_leave_bluetooth"
                        setCheck="@{model.location.leaveBlueTooth}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:onClick="@{(v)->model.toggle(v)}"
                        android:textOff="@string/off"
                        android:textOn="@string/on" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="16dp"
                        android:text="@string/wifi" />

                    <ToggleButton
                        android:id="@+id/toggle_leave_wifi"
                        setCheck="@{model.location.leaveWifi}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:onClick="@{(v)->model.toggle(v)}"
                        android:textOff="@string/off"
                        android:textOn="@string/on" />
                </LinearLayout>

                <View style="@style/lineView" />
            </LinearLayout>
        </ScrollView>

        <com.google.android.gms.ads.AdView
            setBanner="@{model.adRequest}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:adSize="SMART_BANNER"
            android:background="@color/cardBackground"
            app:adUnitId="@string/banner_ad_id" />
    </LinearLayout>


</layout>