<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="AppSelectSettingBinding">

        <import type="android.view.View" />

        <variable
            name="model"
            type="com.yts.smartsetting.view.viewmodel.SettingViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardBackground"
        android:clickable="true"
        android:orientation="vertical">
        <!--헤더-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->model.close()}"
                android:padding="16dp"
                app:srcCompat="@drawable/ic_arrow_back_white_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="16dp"
                android:text="@string/enabled" />

            <android.support.v7.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:checked="@{model.isEnable}"
                android:onClick="@{(v)->model.enable(v)}" />
        </LinearLayout>

        <View style="@style/lineView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:selectableItemBackground"
            android:gravity="center_vertical"
            android:onClick="@{()->model.startAppSelect()}"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="16dp"
                android:text="@string/select_app" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/no_app_selected"
                android:padding="16dp" />
        </LinearLayout>

        <View style="@style/lineView" />


    </LinearLayout>
</layout>