<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="MainBinding">

        <import type="android.view.View" />

        <import type="com.yts.smartsetting.utill.Keys" />

        <variable
            name="model"
            type="com.yts.smartsetting.view.viewmodel.MainViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--헤더-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                app:srcCompat="@drawable/ic_settings_white_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="18sp" />
        </LinearLayout>

        <!--이어폰-->
        <android.support.design.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="@{()->model.start(Keys.EAR)}"
            app:cardBackgroundColor="@color/cardBackground"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:text="@string/connect_earphone" />

                    <TextView
                        setLaunchAppText="@{model.earName}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:hint="@string/msg_earphone"
                        android:textSize="11sp" />
                </LinearLayout>

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_earphone_24dp" />
            </LinearLayout>
        </android.support.design.card.MaterialCardView>
        <!--블루투스-->
        <android.support.design.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="@{()->model.start(Keys.BLUE_TOOTH)}"
            app:cardBackgroundColor="@color/cardBackground"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:text="@string/connect_bluetooth" />

                    <TextView
                        setLaunchAppText="@{model.blueToothName}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:hint="@string/msg_bluetooth"
                        android:textSize="11sp" />
                </LinearLayout>

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_bluetooth_white_24dp" />
            </LinearLayout>
        </android.support.design.card.MaterialCardView>
        <!--위치-->
        <android.support.design.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="@{()->model.startLocationListDialog()}"
            app:cardBackgroundColor="@color/cardBackground"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:text="@string/according_to_location" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:hint="@string/msg_location"
                        android:textSize="11sp" />
                </LinearLayout>

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="@color/tintColor"
                    app:srcCompat="@drawable/ic_location_on_black_24dp" />
            </LinearLayout>
        </android.support.design.card.MaterialCardView>

    </LinearLayout>


</layout>