<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="LocationListBinding">

        <import type="android.view.View" />

        <variable
            name="model"
            type="com.yts.smartsetting.view.viewmodel.LocationListViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cardBackground"
                android:clickable="true"
                android:orientation="vertical">
                <!--헤더-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/background"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{()->model.close()}"
                        android:padding="16dp"
                        app:srcCompat="@drawable/ic_arrow_back_white_24dp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/setting"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="16dp"
                        android:text="@string/enabled" />

                    <android.support.v7.widget.SwitchCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:checked="@{model.isEnable}"
                        android:onClick="@{(v)->model.enable(v)}" />
                </LinearLayout>

                <View style="@style/lineView" />

                <android.support.v7.widget.RecyclerView
                    setLocationAdapter="@{model.mLocationList}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->model.startLocationDialog()}"
                android:tint="@color/tintColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:srcCompat="@drawable/ic_add_black_24dp"
                app:useCompatPadding="true" />
        </android.support.constraint.ConstraintLayout>

        <com.google.android.gms.ads.AdView
            setBanner="@{model.adRequest}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardBackground"
            app:adSize="SMART_BANNER"
            app:adUnitId="@string/banner_ad_id" />
    </LinearLayout>
</layout>